--- a/simplecaculator.html
+++ b/simplecaculator.html
@@ -6,37 +6,12 @@
     <script src="js.js"></script>
 </head>
 <body>
-     <table border="1">
-         <input type="number" id="num">
-         <input type="number" id="num1">
-         <input type="number" id="result">
-         <tr>
-             <td><input type="button" id="1" onclick="addNumber1()" name="1" value="1"></td>
-             <td><input type="button" id="2" onclick="addNumber2()" name="2" value="2"></td>
-             <td><input type="button" id="3" onclick="addNumber3()" name="3" value="3"></td>
-             <td><input type="button" id="total" onclick="" value="+"></td>
-         </tr>
-         <tr>
-             <td><input type="button" id="4" onclick="addNumber4()" name="4" value="4"></td>
-             <td><input type="button" id="5" onclick="addNumber5()" name="5" value="5"></td>
-             <td><input type="button" id="6" onclick="addNumber6()" name="6" value="6"></td>
-             <td><input type="button" id="minus" onclick="" value="-"></td>
-         </tr>
-         <tr>
-             <td><input type="button" id="7" onclick="addNumber7()" name="7" value="7"></td>
-             <td><input type="button" id="8" onclick="addNumber8()" name="8" value="8"></td>
-             <td><input type="button" id="9" onclick="addNumber9()" name="9" value="9"></td>
-             <td><input type="button" id="multiply"  onclick="" value="*"></td>
-         </tr>
-         <tr>
-             <td><input type="button" id="comma" onclick="" value="."></td>
-             <td><input type="button" onclick="addNumber0()" name="0" value="0"></td>
-             <td><input type="button" id="erase" onclick="addition()" value="="></td>
-             <td><input type="button" id="apportion" value="/"></td>
-         </tr>
-     </table>
-     <input type="number" id="sohieua"><br>
-     <input type="number" id="sohieub">
-<button onclick="sap()">Enter</button>
+<input type="text" id="num1" >
+<input id="num2" type="text"><br>
+<input type="button" id="addition" onclick="addition()" value="Addition(+)">
+<input type="button" id="subtraction" onclick="subtraction()" value="Subtraction(-)">
+<input type="button" id="multiplication" onclick="munTipLiCaTion()" value="Multiplication(*)">
+<input type="button" id="division" onclick="divISion()" value="Division(/)">
+<div id="result">Result Divition:</div>
 </body>
 </html>
